<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:padding="10sp" 
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/bg"
  >
  
<TextView 
	android:id="@+id/helptop" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:text="@string/help_title"
	android:gravity="center"
	android:textColor="#000000"
	/>
<TextView 
	android:id="@+id/help" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:text="@string/help_message"
	android:layout_below="@+id/helptop"
	android:textColor="#000000"
	android:layout_marginTop="10sp"
	/>
<TextView 
	android:id="@+id/help1" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:text="@string/help_message1"
	android:layout_below="@+id/help"
	android:textColor="#000000"
	android:layout_marginTop="10sp"
	/>
<TextView 
	android:id="@+id/help2" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:textSize="20sp"
	android:text="@string/help_message2"
	android:layout_below="@+id/help1"
	android:textColor="#000000"
	android:layout_marginTop="10sp"
	/>	
</RelativeLayout>
